# dataplot

./: README.md  dataplot.py  setup.cfg  setup.py
dataplot/: __init__.py  dataplot.py  pandas.py
