[metadata]
name = dataplot
description = An opinionated library to analyze and visualize datasets
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://
# author =
# author_email =
license = GNU General Public License v3
license_file = LICENSE
platforms = any

[options]
packages = find:

[options.packages.find]
include = dataplot
